--- a/modules/bootkube/resources/experimental/manifests/etcd-operator.yaml
+++ b/modules/bootkube/resources/experimental/manifests/etcd-operator.yaml
@@ -17,6 +17,10 @@ spec:
       labels: 
         k8s-app: etcd-operator
     spec: 
+      volumes:
+      - name: debug-volume
+        hostPath:
+          path: /var/tmp
       containers: 
         - env: 
             - name: MY_POD_NAMESPACE
@@ -31,6 +35,12 @@ spec:
               value: /tmp
           image: ${etcd_operator_image}
           name: etcd-operator
+          command:
+          - /usr/local/bin/etcd-operator
+          - --debug-logfile-path=/var/tmp/etcd-operator/debug/debug.log
+          volumeMounts:
+          - mountPath: /var/tmp/etcd-operator/debug
+            name: debug-volume
       nodeSelector:
         node-role.kubernetes.io/master: ""
       securityContext:
